Eliminate a deprecation warning from Java 11